re PR c++/46903 ([C++0x] ICE unexpected expression of kind template_id_expr)

PR c++/46903
	* typeck2.c (check_narrowing): Only check arithmetic types.

From-SVN: r168783